fixing alignment issues

--- a/src/app/debug-board/debug-board.component.scss
+++ b/src/app/debug-board/debug-board.component.scss
@@ -3,9 +3,10 @@
   }
   
   .cell {
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
     display: inline-block;
     border: 1px solid black;
     vertical-align: top;
+    box-sizing: border-box;
   }
